--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.conga.tools.mokol</groupId>
   <artifactId>conga-mokol-plugin-priam</artifactId>
-  <version>0.1-SNAPSHOT</version>
+	<version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>conga-mokol-plugin-priam</name>
@@ -26,5 +26,11 @@
       <artifactId>conga-mokol</artifactId>
       <version>${project.version}</version>
     </dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
   </dependencies>
 </project>
